django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: little-lemon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: little-lemon
  template:
    metadata:
      labels:
        app: little-lemon
    spec:
      containers:
      - name: little-lemon
        image: keroles149/little-lemon:latest
        ports:
        - containerPort: 8000
        imagePullPolicy: IfNotPresent
