django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: little-lemon-service
spec:
  type: ClusterIP
  selector:
    app: little-lemon
  ports:
    - port: 80
      targetPort: 8000
